# solana-ua-bootcamp-2025-03-19

./: .gitignore
practice-2/solana-task-2/: Cargo.toml
practice-2/solana-task-2-ts/: create-nonce-account.ts  create-token-account.ts  create-token-metadata.ts  create-token-mint.ts  mint-tokens.ts  mint-with-multisig.ts  package-lock.json  package.json  send-sol.ts  transfer-token-with-nonce.ts  transfer-token.ts
practice-4/: README.md
practice-4/solana-task/: Cargo.toml
